# add executable
#add_executable(main main.cc)

# link executable to webrtc library
# Since the webrtc library has public include directories
# we will use those link directories when building `main`
#target_link_libraries(main LINK_PUBLIC webrtc)

find_library(GTEST_LIBRARY gtest)
find_library(GMOCK_LIBRARY gmock)

include_directories(PUBLIC ../src)
include_directories(PUBLIC ../webrtc)

add_executable(h265_profile_tier_level_parser_unittest h265_profile_tier_level_parser_unittest.cc)
add_test(h265_profile_tier_level_parser_unittest h265_profile_tier_level_parser_unittest)
#target_include_directories(h265_profile_tier_level_parser_unittest PUBLIC /usr/local/include ${CMAKE_CURRENT_SOURCE_DIR} webrtc)

target_link_libraries(h265_profile_tier_level_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_profile_tier_level_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_profile_tier_level_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_vps_parser_unittest h265_vps_parser_unittest.cc)
add_test(h265_vps_parser_unittest h265_vps_parser_unittest)
target_link_libraries(h265_vps_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_vps_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_vps_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_vui_parameters_parser_unittest h265_vui_parameters_parser_unittest.cc)
add_test(h265_vui_parameters_parser_unittest h265_vui_parameters_parser_unittest)
target_link_libraries(h265_vui_parameters_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_vui_parameters_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_vui_parameters_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_st_ref_pic_set_parser_unittest h265_st_ref_pic_set_parser_unittest.cc)
add_test(h265_st_ref_pic_set_parser_unittest h265_st_ref_pic_set_parser_unittest)
target_link_libraries(h265_st_ref_pic_set_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_st_ref_pic_set_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_st_ref_pic_set_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_sps_parser_unittest h265_sps_parser_unittest.cc)
add_test(h265_sps_parser_unittest h265_sps_parser_unittest)
target_link_libraries(h265_sps_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_sps_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_sps_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_pps_parser_unittest h265_pps_parser_unittest.cc)
add_test(h265_pps_parser_unittest h265_pps_parser_unittest)
target_link_libraries(h265_pps_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_pps_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_pps_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_aud_parser_unittest h265_aud_parser_unittest.cc)
add_test(h265_aud_parser_unittest h265_aud_parser_unittest)
target_link_libraries(h265_aud_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_aud_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_aud_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_rtp_single_parser_unittest h265_rtp_single_parser_unittest.cc)
add_test(h265_rtp_single_parser_unittest h265_rtp_single_parser_unittest)
target_link_libraries(h265_rtp_single_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_rtp_single_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_rtp_single_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_rtp_parser_unittest h265_rtp_parser_unittest.cc)
add_test(h265_rtp_parser_unittest h265_rtp_parser_unittest)
target_link_libraries(h265_rtp_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_rtp_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_rtp_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_rtp_ap_parser_unittest h265_rtp_ap_parser_unittest.cc)
add_test(h265_rtp_ap_parser_unittest h265_rtp_ap_parser_unittest)
target_link_libraries(h265_rtp_ap_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_rtp_ap_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_rtp_ap_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_rtp_fu_parser_unittest h265_rtp_fu_parser_unittest.cc)
add_test(h265_rtp_fu_parser_unittest h265_rtp_fu_parser_unittest)
target_link_libraries(h265_rtp_fu_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_rtp_fu_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_rtp_fu_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_slice_parser_unittest h265_slice_parser_unittest.cc)
add_test(h265_slice_parser_unittest h265_slice_parser_unittest)
target_link_libraries(h265_slice_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_slice_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_slice_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_bitstream_parser_unittest h265_bitstream_parser_unittest.cc)
add_test(h265_bitstream_parser_unittest h265_bitstream_parser_unittest)
target_link_libraries(h265_bitstream_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_bitstream_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_bitstream_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)

add_executable(h265_nal_unit_parser_unittest h265_nal_unit_parser_unittest.cc)
add_test(h265_nal_unit_parser_unittest h265_nal_unit_parser_unittest)
target_link_libraries(h265_nal_unit_parser_unittest PUBLIC h265nal)
target_link_libraries(h265_nal_unit_parser_unittest PUBLIC ${GTEST_LIBRARY} gtest_main)
target_link_libraries(h265_nal_unit_parser_unittest PUBLIC ${GMOCK_LIBRARY} gmock_main)
